--- a/server/package.json
+++ b/server/package.json
@@ -11,13 +11,13 @@
   },
   "dependencies": {
     "body-parser": "1.18.3",
-    "jsonwebtoken": "8.3.0",
+    "jsonwebtoken": "^8.3.0",
     "mongodb": "3.1.0-beta4",
-    "mongoose": "5.1.3",
+    "mongoose": "^8.14.1",
     "mongoose-sequence": "4.0.1",
     "passport": "0.4.0",
     "passport-local": "1.0.0",
-    "validator": "10.4.0"
+    "validator": "^10.4.0"
   },
   "devDependencies": {
     "@types/express": "^4.11.1",
@@ -25,7 +25,7 @@
     "@types/mongoose": "^5.0.15",
     "cors": "^2.8.5",
     "eslint": "^4.19.1",
-    "express": "^4.19.2",
+    "express": "^4.16.3",
     "request": "^2.88.2"
   }
 }
