--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "body-parser": "1.18.3",
+    "dotenv": "^17.2.1",
+    "googleapis": "^159.0.0",
     "jsonwebtoken": "^8.3.0",
     "mongodb": "3.1.0-beta4",
     "mongoose": "^8.14.1",
