--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,10 @@
   "author": "Jeliozver",
   "license": "MIT",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "lint": "eslint . --ext .js",
+    "lint:fix": "eslint . --ext .js --fix",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "body-parser": "1.18.3",
@@ -26,8 +29,11 @@
     "@types/mongodb": "^3.0.18",
     "@types/mongoose": "^5.0.15",
     "cors": "^2.8.5",
-    "eslint": "^4.19.1",
+    "eslint": "^9.34.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
     "express": "^4.16.3",
+    "prettier": "^3.6.2",
     "request": "^2.88.2"
   }
 }
