--- a/server/package.json
+++ b/server/package.json
@@ -10,21 +10,30 @@
     "start": "node app.js",
     "lint": "eslint . --ext .js",
     "lint:fix": "eslint . --ext .js --fix",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "merge:schema": "node graphql/mergeSchema.js",
+    "dev": "npm run merge:schema && nodemon server.js"
   },
   "dependencies": {
-    "body-parser": "1.18.3",
-    "dotenv": "^17.2.1",
+    "@apollo/server": "^5.0.0",
+    "@as-integrations/express4": "^1.1.2",
+    "@graphql-tools/load-files": "^7.0.1",
+    "@graphql-tools/merge": "^9.1.1",
+    "body-parser": "^1.18.3",
+    "dotenv": "^17.2.2",
     "googleapis": "^159.0.0",
+    "graphql": "^16.11.0",
+    "graphql-tag": "^2.12.6",
     "jsonwebtoken": "^8.3.0",
     "mongodb": "3.1.0-beta4",
-    "mongoose": "^8.14.1",
+    "mongoose": "^8.18.1",
     "mongoose-sequence": "4.0.1",
     "passport": "0.4.0",
     "passport-local": "1.0.0",
     "validator": "^10.4.0"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^6.0.0",
     "@types/express": "^4.11.1",
     "@types/mongodb": "^3.0.18",
     "@types/mongoose": "^5.0.15",
@@ -32,7 +41,7 @@
     "eslint": "^9.34.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
-    "express": "^4.16.3",
+    "express": "^4.21.2",
     "prettier": "^3.6.2",
     "request": "^2.88.2"
   }
