--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "start": "npm run dev"
   },
   "dependencies": {
+    "@apollo/client": "^4.0.6",
     "@chakra-ui/icons": "^2.2.4",
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
@@ -21,6 +22,7 @@
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.2.6",
+    "graphql": "^16.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
