--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "react-icons": "^5.3.0",
     "react-loading-skeleton": "^3.5.0",
     "react-redux": "^9.1.2",
+    "recharts": "^3.2.1",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
