--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "googleapis": "^159.0.0",
     "graphql": "^16.11.0",
     "graphql-tag": "^2.12.6",
+    "graphql-type-json": "^0.3.2",
     "jsonwebtoken": "^8.3.0",
     "mongodb": "3.1.0-beta4",
     "mongoose": "^8.18.1",
