convert from commonjs to es6

--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,7 @@
 {
   "name": "book-store-server",
   "version": "0.1.0",
+  "type": "module",
   "description": "Express server for Book Store Web App",
   "main": "app.js",
   "keywords": [],
