--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "mongodb": "3.1.0-beta4",
     "mongoose": "^8.18.1",
     "mongoose-sequence": "4.0.1",
+    "nodemailer": "^7.0.12",
     "passport": "0.4.0",
     "passport-local": "1.0.0",
     "validator": "^10.4.0"
