--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "date-fns": "^3.6.0",
     "framer-motion": "^11.2.6",
     "graphql": "^16.11.0",
+    "papaparse": "^5.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
@@ -35,6 +36,7 @@
     "@eslint/compat": "^1.0.3",
     "@eslint/js": "^9.4.0",
     "@types/date-fns": "^2.6.0",
+    "@types/papaparse": "^5.5.2",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
